tests/sumo/tls/NEMA/errors/badPhases/errors.sumo
Error: At traffic signal '0' program '0' no phase named '1' was found
Quitting (on error).
